# sl-5-4-standalone-osi-trace-file-player

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  linter.yml  spdx.yml
